--- a/taskrail_client/src/containers/Layout/style.css
+++ b/taskrail_client/src/containers/Layout/style.css
@@ -1,27 +1,27 @@
-div.layout > div.container > * {
-    padding: 0px;
-    margin: 0px;
+.navbar{
+    width:100%;
+    height:5%;
+}
+
+.left{
+    width:20%;
+    height:95%;
     align-content: center;
-    text-align: center;
-    width: 100%;
+    position:fixed;
 }
 
-div.layout > div.container {
-    border: 2px solid black;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
+.right{
+    width:20%;
+    padding-left: 80%;
+    height:95%;
+    align-content: center;
+    position:fixed;
 }
 
-div.layout {
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    border: 2px solid black;
+.center{
+    width:60%;
+    height: 95%;
+    align-content: center;
+    position:fixed;
+    padding-left: 20%;
 }
-
-body {
-    margin: 0px;
-    padding: 0px;
-}
-
