--- a/taskrail_client/src/containers/NavBar/style.css
+++ b/taskrail_client/src/containers/NavBar/style.css
@@ -1,10 +1,4 @@
-h1.MotivationalSpeech {
-    font-size: larger;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-
-div.NavBar {
-    text-align: center;
-    border-bottom: 2px solid black;
+.nav{
+    width: 100%;
+    height: 100%;
 }
