color palette css stuff

--- a/taskrail_client/src/components/TaskNode/Decorators/WithSubtaskSkin/WithSubtaskSkin.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithSubtaskSkin/WithSubtaskSkin.css
@@ -1,8 +1,7 @@
 .subtask-skin {
     position: absolute;
-    border: 5 px solid blue;
-    border-radius: 10;
-    background-color: red;
+    border: black;
+    background-color: #ff5f5c;
     width: inherit;
     height: inherit;
 }
