--- a/taskrail_client/src/containers/SideMenu/SideMenu.css
+++ b/taskrail_client/src/containers/SideMenu/SideMenu.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    background-color: rgb(18, 176, 41);
+    background-color: #b1c3fc;
     box-shadow:inset 0 0 0 99999px rgba(255,255,255,0.2);
 }
 
