--- a/taskrail_client/src/containers/NavBar/style.css
+++ b/taskrail_client/src/containers/NavBar/style.css
@@ -1,5 +1,12 @@
 .nav{
     width: 100%;
     height: 100%;
+    padding-left: 0.5%;
+}
+
+.top-pane {
     background-color: #6db078;
+    border: black;
+    border-style: solid;
+    border-width: thin;
 }
