--- a/taskrail_client/src/containers/SideMenu/SideMenu.css
+++ b/taskrail_client/src/containers/SideMenu/SideMenu.css
@@ -13,14 +13,14 @@
     height: 50px;
     background-color: #b1c3fc;
     box-shadow:inset 0 0 0 99999px rgba(255,255,255,0.2);
-    border: black;
+    /* border: black;
     border-style: solid;
     border-width:thin;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 3%;
-    margin-right: 3%;
+    margin-right: 3%; */
 }
 
 .sidemenu-item:hover{
