Organized TaskParentNode in a new independent component

--- a/taskrail_client/src/containers/RailContainer/RailContainer.css
+++ b/taskrail_client/src/containers/RailContainer/RailContainer.css
@@ -1,5 +1,11 @@
+.rail-view-panel{
+    position: relative;
+    width: fit-content;
+}
+
 .rail-container{
     position: relative;
+    width: fit-content;
     height: 100%;
     padding-top: 30px;
 }
