--- a/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
+++ b/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
@@ -7,19 +7,9 @@
     z-index: -100;
 }
 
-.date-divider {
-    border-left: 2px solid rgb(10, 211, 161);
-    height: 100%;
-    position: absolute;
-    margin-left: -0.5px;
-    top: 0;
-}
-
-.date-divider.focus {
-    border-left: 4px solid rgb(10, 211, 161);
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    margin-left: -2px;
-    top: 0;
+.calendar-divider{
+    border-left:1px solid #16222c; 
+    border-right:1px solid #16222c; 
+    height:100%;
+    position:absolute;
 }
