Commented out line 11. very important

--- a/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
@@ -34,7 +34,7 @@ a.delete {
     border-style: solid;
     border-width: medium;
     background-color: #E00400;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 .task-parent-section {
