--- a/taskrail_client/src/containers/RailContainer/RailContainer.css
+++ b/taskrail_client/src/containers/RailContainer/RailContainer.css
@@ -1,11 +1,18 @@
 .rail-view-panel{
     position: relative;
     width: fit-content;
+    height: 100%;
 }
 
 .rail-container{
-    position: relative;
+    display: block;
+    position:absolute;
     width: fit-content;
-    height: 100%;
-    padding-top: 60px;
+    height:auto;
+    bottom:0;
+    top:0;
+    left:0;
+    right:0;
+    /* Same as the background calendar date section height*/
+    margin-top:60px;
 }
