Implemented checkbox decorator and modified appearance of all tasknodes.

--- a/taskrail_client/src/components/TaskNode/Decorators/WithParentSkin/WithParentSkin.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithParentSkin/WithParentSkin.css
@@ -1,5 +1,5 @@
 .task-parent {
-    border: black;
+    /* border: black; */
     border-style: solid;
-    border-width: medium;
+    /* border-width: medium; */
 }
