--- a/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
+++ b/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
@@ -6,8 +6,7 @@
 }
 
 .calendar-divider {
-  border-left: 2px solid #16222c;
-  border-right: 2px solid #16222c;
+  border-left: 4px solid #16222c;
   height: 100%;
   align-content: center;
   align-items: center;
@@ -19,7 +18,9 @@
   align-items: center;
   align-self: center;
   width: 100%;
+  height: 10%;
   margin-top: 0;
+  border-bottom: 4px solid #16222c;
 }
 
 .day_of_week {
@@ -28,6 +29,8 @@
   align-items: center;
   text-align: center;
   margin-top: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .day_of_month {
@@ -36,4 +39,6 @@
   align-items: center;
   text-align: center;
   margin-top: -24px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: lighter;
 }
