--- a/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
@@ -52,3 +52,8 @@ div.task-parent .checkbox-container {
     align-items: center;
     border-right: solid;
 }
+
+.taskparent-skin {
+    width: 70%;
+    float: right;
+}
