--- a/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
+++ b/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
@@ -16,28 +16,40 @@
   align-content: center;
   align-items: center;
   align-self: center;
+  text-align: center;
   width: 100%;
   height: 60px;
   margin-top: 0;
+  position: relative;
   border-bottom: 4px solid #16222c;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.indicator {
+  z-index: -1;
+  border-radius: 100%;
+  background-color: brown;
+  height: 100%;
+  position: absolute;
+  width: 60px;
+  margin: 0 auto;
 }
 
 .date-label > .day-of-week {
-  align-self: center;
-  align-content: center;
-  align-items: center;
   text-align: center;
-  margin-top: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 20px;
+  margin-top: 5px;
 }
 
 .date-label > .date {
-  align-self: center;
-  align-content: center;
-  align-items: center;
   text-align: center;
-  margin-top: -24px;
+  margin: 0 auto;
   font-family: "Courier New", Courier, monospace;
   font-weight: lighter;
+  font-size: 20px;
+  margin-top: 5px;
 }
