--- a/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithSelectableTaskParent/WithSelectableTaskParent.css
@@ -38,6 +38,7 @@ a.delete {
 }
 
 .task-parent-section {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +57,7 @@ div.task-parent .checkbox-container {
 .taskparent-skin {
     width: 70%;
     float: right;
+    font-size: 12px;
 }
 
 .faded {
