Slight improvement on subtask deadline section

--- a/taskrail_client/src/components/TaskNode/Decorators/WithSubtaskSkin/WithSubtaskSkin.css
+++ b/taskrail_client/src/components/TaskNode/Decorators/WithSubtaskSkin/WithSubtaskSkin.css
@@ -42,10 +42,15 @@ input[type=checkbox].float-checkbox {
 }
 
 .subtask-bottom input[type=date] {
-    background-color: #ff5f5c;
+    background-color: transparent;
+    color:transparent;
     border: none;
     border-radius: 25px;
     margin-right: 5%;
+}
+
+.subtask-bottom input[type=date]:focus{
+    color:transparent;
 }
 
 .subtask-bottom p {
