--- a/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
+++ b/taskrail_client/src/components/BackgroundWeekCalendar/BackgroundWeekCalendar.css
@@ -38,18 +38,16 @@
 
 .date-label > .day-of-week {
   text-align: center;
-  margin: 0 auto;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 20px;
-  margin-top: 5px;
 }
 
 .date-label > .date {
   text-align: center;
-  margin: 0 auto;
+  margin: 0;
   font-family: "Courier New", Courier, monospace;
   font-weight: lighter;
   font-size: 20px;
-  margin-top: 5px;
 }
