--- a/taskrail_client/src/containers/NavBar/NavBar.css
+++ b/taskrail_client/src/containers/NavBar/NavBar.css
@@ -19,7 +19,7 @@
     width: 30%;
     padding-left: 10px;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
     font-size: 30px;
     font-weight: bold;
 }
