--- a/taskrail_client/src/containers/SideInfoBar/style.css
+++ b/taskrail_client/src/containers/SideInfoBar/style.css
@@ -9,23 +9,25 @@
   flex-direction: column;
 }
 
-.TitleAndCheckbox {
+.sideinfo-bar-top {
   display: flex;
-  align-self: left;
   flex-direction: row;
   align-items: flex-start;
+  border-bottom: rgb(88, 88, 88);
+  padding-left: 10px;
 }
 
-.Title {
+.infobar-title {
   order: 2;
-  margin-left: 10px;
   margin-top: 0%;
+  width: 100%;
 }
 
-.Checkbox {
+.infobar-checkbox {
   order: 1;
-  margin-left: 5px;
-  margin-top: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 7px;
 }
 
 hr {
@@ -35,36 +37,20 @@ hr {
   margin-top: 0%;
 }
 
-.Deadline,
-.Note {
-  display: flex;
-  align-self: left;
-  flex-direction: row;
-  align-items: flex-start;
-  margin-left: 0%;
+.note{
+  height: 100%;
 }
 
-.NoteLabel,
-.DeadlineLabel {
-  order: 1;
-  margin-top: 0%;
-  padding-top: 0%;
-  margin-left: 0%;
+.note > textarea{
+  height: 100%;
+  background: transparent;
 }
 
-.NoteInput,
-.DeadlineInput {
-  order: 2;
-  width: 150px;
-  margin-top: 0%;
-  padding-top: 0%;
-  margin-left: 5%;
-}
-
-.InputList {
+.input-section {
   display: flex;
   align-self: left;
   flex-direction: column;
   margin-left: 0%;
   margin-top: 0%;
+  height: 100%;
 }
