--- a/taskrail_client/src/containers/SideInfoBar/SideInfoBar.css
+++ b/taskrail_client/src/containers/SideInfoBar/SideInfoBar.css
@@ -41,11 +41,6 @@ hr {
   height: 100%;
 }
 
-.note > textarea{
-  height: 100%;
-  background: transparent;
-}
-
 .input-section {
   display: flex;
   align-self: left;
@@ -53,4 +48,9 @@ hr {
   margin-left: 0%;
   margin-top: 0%;
   height: 100%;
+}
+
+.textarea{
+  height: 100%;
+  background: transparent;
 }
