--- a/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
+++ b/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
@@ -1,35 +1,16 @@
-.selected{
+.task-parent.selected{
     box-shadow: 5px 5px 10px;
     transform: scale(1.1);
 }
 
-.selected .subtask-top {
-    margin-right: -7px;
-}
-.hide{
+.task-parent > .delete.hide{
     display: none;
 }
 
-a.delete {
-    text-decoration: none;
-    float: right;
-    margin-top: -10px;
-    margin-left: auto;
-    margin-right: -10px;
-    cursor: pointer;
-    color: #fff;
-    border: 1px solid #AEAEAE;
-    border-radius: 30px;
-    background: #605F61;
-    font-size: 15px;
-    font-weight: bold;
-    line-height: 0px;
-    padding-top: 5px;
-    padding-right: 1px;
-    padding-bottom: 8px;
-    padding-left: 1px;
-    content: "x";
-    z-index: -1;
+.task-parent > a.delete {
+    position: absolute;
+    top: -25px;
+    right: -10px;
 }
 
 .task-parent {
