--- a/taskrail_client/src/containers/RailContainer/RailContainer.css
+++ b/taskrail_client/src/containers/RailContainer/RailContainer.css
@@ -18,6 +18,7 @@
     /* Same as the background calendar date section height*/
     margin-top: 60px;
     padding-top:30px;
+    padding-bottom: 70vh;
 }
 
 .rail-divider{
