--- a/taskrail_client/src/components/AddSubtaskButton/AddSubtaskButton.css
+++ b/taskrail_client/src/components/AddSubtaskButton/AddSubtaskButton.css
@@ -1,17 +1,9 @@
 .add-subtask-btn{
+    display: none;
     height: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.add-subtask-btn:hover{
-    border-style: solid;
-    border-color: rgb(109, 176, 120);
-    border-radius: 10px;
-    border-width: 5px;
-    height: 15px;
-    color: rgb(109, 176, 120);
 }
 
 .plus-icon{
@@ -19,6 +11,23 @@
     height: 100%;
     text-align: center;
     font-size: 22px;
-    display: inline-block;
     top: 50%;
+}
+
+.add-subtask-btn > .show-on-hover{
+    visibility: hidden;
+}
+
+.add-subtask-btn:hover > .show-on-hover{
+    visibility: visible;
+}
+
+.add-subtask-btn:hover{
+    display: relative;
+    border-style: solid;
+    border-color: rgb(109, 176, 120);
+    border-radius: 10px;
+    border-width: 2px;
+    height: 15px;
+    color: rgb(109, 176, 120);
 }
