--- a/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
+++ b/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
@@ -30,7 +30,6 @@
 
 div.task-parent .checkbox-container {
     width: 20%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,6 +47,7 @@ div.task-parent .checkbox-container {
 }
 
 .taskparent-title-editor{
+    padding-left: 5px;
     overflow: hidden;
     width: 80%;
 }
