--- a/taskrail_client/src/components/AddSubtaskButton/AddSubtaskButton.css
+++ b/taskrail_client/src/components/AddSubtaskButton/AddSubtaskButton.css
@@ -1,9 +1,8 @@
 .add-subtask-btn{
-    display: none;
-    height: 25px;
-    display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
+    flex: 1;
 }
 
 .plus-icon{
