--- a/taskrail_client/src/components/TaskNode/SubtaskNode/SubtaskNode.css
+++ b/taskrail_client/src/components/TaskNode/SubtaskNode/SubtaskNode.css
@@ -62,6 +62,9 @@ input[type=checkbox].float-checkbox {
 .subtask.selected{
     box-shadow: 5px 5px 10px;
     transform: scale(1.1);
+    z-index: 1000;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .subtask > a.hide{
@@ -75,7 +78,7 @@ input[type=checkbox].float-checkbox {
 .subtask > a.delete {
     position: absolute;
     top: -25px;
-    right: -10px;
+    right: 4px;
 }
 
 .subtask-title-editor{
