--- a/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
+++ b/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
@@ -13,6 +13,10 @@
     display: flex;
 }
 
+.taskparent-content{
+    width: 100%;
+}
+
 .task-parent.selected{
     box-shadow: 5px 5px 10px;
     transform: scale(1.1);
