--- a/taskrail_client/src/components/TaskNode/SubtaskNode/SubtaskNode.css
+++ b/taskrail_client/src/components/TaskNode/SubtaskNode/SubtaskNode.css
@@ -4,6 +4,7 @@
     border-radius: 20px;
     position: relative;
     margin-bottom: 2px;
+    font-weight: bold;
 } 
 
 .subtask-top, .subtask-bottom {
