--- a/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
+++ b/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
@@ -11,6 +11,7 @@
     border-style: solid;
     background-color: #E00400;
     display: flex;
+    font-weight: bold;
 }
 
 .taskparent-content{
@@ -57,5 +58,4 @@ div.task-parent .checkbox-container {
 .taskparent-title-editor{
     padding-left: 5px;
     overflow: hidden;
-    width: 80%;
 }
