--- a/taskrail_client/src/components/CommonParts/EditableTextbox/EditableTextbox.css
+++ b/taskrail_client/src/components/CommonParts/EditableTextbox/EditableTextbox.css
@@ -7,3 +7,8 @@
     text-align: left;
     overflow: hidden;
 }
+
+p:empty:not(:focus)::before {
+    content: attr(data-placeholder);
+    color: grey;
+}
