--- a/taskrail_client/src/components/BackgroundWeekCalendar/CalendarPagination/WeekPagination.css
+++ b/taskrail_client/src/components/BackgroundWeekCalendar/CalendarPagination/WeekPagination.css
@@ -1,5 +1,6 @@
 .week-pagination {
   display: inline-block;
+  margin-left: 10px;
 }
 
 .week-pagination a {
@@ -9,7 +10,7 @@
   text-decoration: none;
   transition: background-color .3s;
   border: 1px solid rgb(91, 90, 90);
-  background-color: #ddd;
+  background-color: rgb(255, 255, 255);
 }
 
 .week-pagination a:hover:not(.active) {background-color: #ddd;}
@@ -17,6 +18,6 @@
 .week-pagination-label{
   display: table-cell;
   padding: 8px 16px;
-  font-size: 16px;
+  font-size: 20px;
   font-style: bold;
   vertical-align: middle;}
