Workspace Menu Remastered...

--- a/taskrail_client/src/containers/NavBar/NavBar.css
+++ b/taskrail_client/src/containers/NavBar/NavBar.css
@@ -1,34 +1,91 @@
-.navbar{
-    width: 100%;
-    height: 100%;
-    padding-left: 0.5%;
-    display: flex;
-    flex-direction: right;
-    padding-top: 5px;
-    padding-bottom: 5px;
+.navbar {
+  width: 100%;
+  height: 100%;
+  padding-left: 0.5%;
+  display: flex;
+  flex-direction: right;
+  flex-flow: row;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.week-pagination {
+  float: left;
 }
 
 .top-pane {
-    background-color: #6db078;
-    border: black;
-    border-style: solid;
-    border-width: thin;
+  background-color: #6db078;
+  border: black;
+  border-style: solid;
+  border-width: thin;
 }
 
-.title{
-    width: 30%;
-    padding-left: 10px;
-    margin-top: 0;
-    margin-bottom: 0 !important;
-    font-size: 30px;
-    font-weight: bold;
+.title {
+  width: 30%;
+  padding-left: 10px;
+  margin-top: 0;
+  margin-bottom: 0 !important;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.dropdown{
-    margin: .25rem;
+.dropdown {
+  margin: 0.25rem;
 }
 
-.dropdown-menu{
-    max-height: 60vh;
-    overflow: scroll;
+.dropdown-menu {
+  max-height: 60vh;
+  overflow: scroll;
+}
+
+.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.showingDropdown {
+  opacity: 100%;
+}
+
+.workspaceSelector {
+  width: 20%;
+  margin-right: 0%;
+  margin-left: 0%;
+  float: left;
+}
+
+.rename {
+  background-color: white;
+  border-radius: 10%;
+  border-right-color: grey;
+  color: #808080;
+  font-size: 10px !important;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.deleteCard {
+  background-color: grey;
+  border-radius: 10%;
+  color: white;
+  font-size: 10px !important;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.rename:hover {
+  background-color: rgb(241, 241, 241) !important;
+}
+
+.deleteCard:hover {
+  color: white !important;
+  background-color: rgb(94, 93, 93);
+}
+
+.card {
+  background-color: white;
+}
+
+.card:active {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none !important;
 }
