--- a/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
+++ b/taskrail_client/src/components/TaskNode/TaskParentNode/TaskParent.css
@@ -1,9 +1,9 @@
 .task-parent-section {
     position: relative;
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 25px;
+    padding-bottom: 25px; */
 }
 
 .task-parent {
@@ -11,6 +11,7 @@
     background-color: #E00400;
     display: flex;
     font-weight: bold;
+    margin: 0 auto;
 }
 
 .taskparent-content{
