--- a/client/src/components/BackgroundWeekCalendar/CalendarPagination/WeekPagination.css
+++ b/client/src/components/BackgroundWeekCalendar/CalendarPagination/WeekPagination.css
@@ -4,8 +4,7 @@
 }
 
 .week-pagination a {
-  color: black;
-  float: left;
+  color: hsl(0, 0%, 0%);
   padding: 8px 16px;
   text-decoration: none;
   transition: background-color .3s;
