--- a/client/src/containers/NavBar/NavBar.css
+++ b/client/src/containers/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+.nav {
   width: 100%;
   height: 100%;
   padding-left: 0.5%;
@@ -7,10 +7,6 @@
   flex-flow: row;
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.week-pagination {
-  float: left;
 }
 
 .top-pane {
@@ -47,11 +43,9 @@
   opacity: 100%;
 }
 
-.workspaceSelector {
-  width: 20%;
+.workspace-selector {
   margin-right: 0%;
   margin-left: 0%;
-  float: left;
 }
 
 .rename {
